<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignUpActivity"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/screen_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="24sp"
            android:textColor="@color/gold"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:textColor="@color/gold"
            android:paddingTop="@dimen/element_padding_vertical"
            android:paddingBottom="@dimen/element_padding_vertical"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/Email"
            android:minHeight="48dp"
            android:textColor="@color/gold"
            android:paddingTop="@dimen/element_padding_vertical"
            android:paddingBottom="@dimen/element_padding_vertical"/>

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/Phone_Number"
            android:minHeight="48dp"
            android:textColor="@color/gold"
            android:paddingTop="@dimen/element_padding_vertical"
            android:paddingBottom="@dimen/element_padding_vertical"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:paddingTop="@dimen/small_padding"
            android:paddingBottom="@dimen/small_padding"
            android:gravity="center"
            android:textColor="@color/gold"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SSO"
            android:paddingTop="@dimen/element_padding_vertical"
            android:paddingBottom="@dimen/element_padding_vertical"
            android:textColor="@color/gold"/>

        <ImageButton
            android:id="@+id/SSO"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:contentDescription="@string/SSO_2"
            app:srcCompat="@drawable/google_sign_in_button"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Desc_3"
            android:paddingTop="@dimen/element_padding_vertical"
            android:paddingBottom="@dimen/element_padding_vertical"
            android:textColor="@color/gold"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:backgroundTint ="@color/gold"
            android:textColor="@color/black"
            android:minHeight="48dp"
            android:paddingTop="@dimen/element_padding_vertical"
            android:paddingBottom="@dimen/element_padding_vertical"/>

        <TextView
            android:id="@+id/GoToSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Go_To_Sign_In"
            android:minHeight="48dp"
            android:focusable="true"
            android:paddingTop="@dimen/element_padding_vertical"
            android:paddingBottom="@dimen/element_padding_vertical"
            android:textColor="@color/gold"
            android:gravity="center"
            android:clickable="true"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>