<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.OtpActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/screen_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/black">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/element_padding_vertical"
            android:paddingBottom="@dimen/element_padding_vertical"
            android:text="@string/OTP"
            android:textSize="32sp"
            android:textColor="@color/gold"/>


        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/element_padding_vertical"
            android:paddingBottom="@dimen/element_padding_vertical"
            android:text="@string/Desc_4"
            android:textSize="20sp"
            android:textColor="@color/gold"/>

        <Button
            android:id="@+id/OTP_GEN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/OTP_GEN"
            android:backgroundTint="@color/gold"
            android:textColor="@color/black"
            android:minHeight="48dp"
            android:paddingTop="@dimen/element_padding_vertical"
            android:paddingBottom="@dimen/element_padding_vertical"/>

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLength="6"
            android:hint="@string/OTP_Label"
            android:minHeight="48dp"
            android:paddingTop="@dimen/element_padding_vertical"
            android:paddingBottom="@dimen/element_padding_vertical"
            android:textColor="@color/gold"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/element_padding_vertical"
            android:paddingBottom="@dimen/element_padding_vertical"
            android:text="@string/Desc_3"
            android:textColor="@color/gold"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/element_padding_vertical"
            android:paddingBottom="@dimen/element_padding_vertical"
            android:minHeight="48dp"
            android:text="@string/Sign_In"
            android:backgroundTint="@color/gold"
            android:textColor="@color/black"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>