<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/screen_padding"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/element_padding_vertical"
            android:paddingBottom="@dimen/element_padding_vertical"
            android:text="@string/title_2"
            android:textSize="32sp"
            android:textColor="@color/gold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/element_padding_vertical"
            android:paddingBottom="@dimen/element_padding_vertical"
            android:text="@string/Sign_In"
            android:textSize="20sp"
            android:textColor="@color/gold" />

        <!-- Country code -->
        <com.hbb20.CountryCodePicker
            android:id="@+id/login_countrycode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minHeight="48dp"
            android:textColor="@color/gold" />

        <!-- Phone number -->
        <EditText
            android:id="@+id/login_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Phone_Number"
            android:inputType="phone"
            android:minHeight="48dp"
            android:paddingTop="@dimen/element_padding_vertical"
            android:paddingBottom="@dimen/element_padding_vertical"
            android:textColor="@color/gold"
            android:textColorHint="@color/gold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/element_padding_vertical"
            android:paddingBottom="@dimen/element_padding_vertical"
            android:text="@string/or"
            android:textColor="@color/gold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/element_padding_vertical"
            android:paddingBottom="@dimen/element_padding_vertical"
            android:text="@string/SSO_2"
            android:textColor="@color/gold" />

        <ImageButton
            android:id="@+id/SSO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            app:srcCompat="@drawable/google_sign_in_button" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/element_padding_vertical"
            android:paddingBottom="@dimen/element_padding_vertical"
            android:text="@string/Desc_3"
            android:textColor="@color/gold" />

        <!-- Send OTP -->
        <Button
            android:id="@+id/send_otp_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:paddingTop="@dimen/element_padding_vertical"
            android:paddingBottom="@dimen/element_padding_vertical"
            android:text="Send OTP"
            android:backgroundTint="@color/gold"
            android:textColor="@color/black" />

        <!-- Loading indicator -->
        <ProgressBar
            android:id="@+id/login_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>